# MAD_slm02

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/edu/utem/ftmk/slm01/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: foodpreprocessed.csv
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/edu/utem/ftmk/slm01/: CSVDataLoader.kt  FoodDetailActivity.kt  FoodItem.kt  InferenceMetrics.kt  MainActivity.kt  MemoryReader.kt  PredictionRecord.kt
app/src/main/java/edu/utem/ftmk/slm01/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/edu/utem/ftmk/slm02/: CSVDataLoader.kt  FoodDetailActivity.kt  FoodItem.kt  MainActivity.kt  PredictionRecord.kt
app/src/main/res/layout/: activity_food_detail.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/edu/utem/ftmk/slm01/: ExampleUnitTest.kt
